[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
description = "Structured logging utilities"
readme = "README.md"
authors = [{name = "Elian Abrão"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["logging", "structured", "console"]
urls = {homepage = "https://github.com/Elian-Abrao/Logger", repository = "https://github.com/Elian-Abrao/Logger"}
dependencies = [
    "colorama>=0.4,<0.5",
    "psutil>=5.9,<8",
    "requests>=2.31,<3",
    "wcwidth>=0.2,<0.3",
    "pyautogui>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "bandit",
    "safety",
    "build",
    "sphinx",
]

[project.scripts]
logger-demo = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logger*"]

[tool.setuptools.package-data]
"logger" = ["*.pyi"]

[tool.mypy]
ignore_missing_imports = true

