[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logger"
version = "0.1.0"
description = "Biblioteca para geração de logs estruturados com formatação colorida, arquivos separados e monitoramento de CPU/Memória. Inclui recursos de profiling, barra de progresso e captura de prints."
readme = "README.md"
authors = [{name = "Elian Abrão"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["logging", "structured", "console"]
urls = {homepage = "https://dev.azure.com/qualysystem/RPA/_git/Logger_Module", repository = "https://dev.azure.com/qualysystem/RPA/_git/Logger_Module"}
dependencies = [
    "colorama>=0.4,<0.5",
    "psutil>=5.9,<8",
    "requests>=2.31,<3",
    "wcwidth>=0.2,<0.3",
    "pyautogui>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "bandit",
    "safety",
    "build",
    "sphinx",
]

[project.scripts]
logger-demo = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["logger*"]

[tool.setuptools.package-data]
"logger" = ["*.pyi"]

[tool.mypy]
ignore_missing_imports = true

