[metadata]
name = logger
version = 0.1.0
description = Structured logging utilities
license = MIT

[options]
packages = find:
install_requires =
    colorama
    psutil
    requests
    wcwidth
    pyautogui
python_requires = >=3.8

[options.entry_points]
console_scripts =
    logger-demo = main:main

[options.packages.find]
include = logger*

